--- a/index.html
+++ b/index.html
@@ -23,23 +23,26 @@ function factorial(n){ return n<=1 ? 1 : n*factorial(n-1); }
 function comb(n,k){ return factorial(n)/(factorial(k)*factorial(n-k)); }
 
 // probability of exactly k successes
-function binomPmf(k, n, p){ return comb(n,k)*Math.pow(p,k)*Math.pow(1-p,n-k); }
-
-// two-sided binomial test
-function binomTest(k, n, p){
-  const probs = Array.from({length:n+1}, (_,i)=>binomPmf(i,n,p));
-  const p_obs = binomPmf(k,n,p);
-  // sum of probabilities as or more extreme than observed
-  const p_two = probs.reduce((acc,pv)=> acc + (pv <= p_obs ? pv : 0), 0);
-  return p_two;
+function binomCdf(k, n, p) {
+  let sum = 0;
+  for (let i = 0; i <= k; i++) sum += binomPmf(i, n, p);
+  return sum;
 }
+
+function binomTestTwoSided(k, n, p) {
+  const cdf = binomCdf(k, n, p);
+  const upperTail = 1 - binomCdf(k - 1, n, p);
+  const pval = Math.min(1, 2 * Math.min(cdf, upperTail));
+  return pval;
+}
+
 
 function runTest(){
   const wins = parseInt(document.getElementById('wins').value);
   const total = parseInt(document.getElementById('total').value);
   const pnull = parseFloat(document.getElementById('pnull').value);
 
-  const pval = binomTest(wins, total, pnull);
+  const pval = binomTestTwoSided(wins, total, pnull);
   const msg = pval < 0.05 ? 
       "Reject H₀: There is evidence that Wrestler A might be stronger." :
       "Fail to reject H₀: result could be due to chance.";
