--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Wrestler Skill Binomial Test</title>
+<title>Right-Tailed Binomial Test</title>
 <style>
   body { font-family: sans-serif; max-width: 500px; margin: 2rem auto; }
   input, button { margin: 0.5rem 0; padding: 0.4rem; width: 100%; font-size: 1rem; }
@@ -10,41 +10,47 @@
 </style>
 </head>
 <body>
-  <h2>Wrestler Skill Binomial Test (Exact Outcome)</h2>
-  
-  <label>Wins: <input id="wins" type="number" value="6"></label>
-  <label>Total Matches: <input id="total" type="number" value="7"></label>
-  <label>Expected Win Prob (H₀): <input id="pnull" type="number" step="0.01" value="0.5"></label>
-  
+  <h2>Right-Tailed Binomial Test (P(X ≥ k))</h2>
+
+  <label>Wins (k): <input id="wins" type="number" value="6"></label>
+  <label>Total Matches (n): <input id="total" type="number" value="7"></label>
+  <label>Expected Win Prob (p): <input id="pnull" type="number" step="0.01" value="0.5"></label>
+
   <button onclick="runTest()">Run Test</button>
-  
   <div id="result"></div>
 
 <script>
-// Factorial for combinations
+// factorial + combinations
 function factorial(n){ return n <= 1 ? 1 : n * factorial(n - 1); }
+function comb(n, k){ return factorial(n) / (factorial(k) * factorial(n - k)); }
 
-// Combinations: n choose k
-function comb(n,k){ return factorial(n)/(factorial(k)*factorial(n-k)); }
+// PMF: P(X = k)
+function binomPmf(k, n, p){
+  return comb(n,k) * Math.pow(p, k) * Math.pow(1 - p, n - k);
+}
 
-// Probability of exactly k wins
-function binomPmf(k, n, p){ 
-  return comb(n,k) * Math.pow(p,k) * Math.pow(1-p, n-k); 
+// Right-tailed: P(X >= k)
+function rightTail(k, n, p){
+  let sum = 0;
+  for (let i = k; i <= n; i++){
+    sum += binomPmf(i, n, p);
+  }
+  return sum;
 }
 
 function runTest(){
-  const wins = parseInt(document.getElementById('wins').value);
-  const total = parseInt(document.getElementById('total').value);
-  const pnull = parseFloat(document.getElementById('pnull').value);
+  const k = parseInt(document.getElementById('wins').value);
+  const n = parseInt(document.getElementById('total').value);
+  const p = parseFloat(document.getElementById('pnull').value);
 
-  const p_exact = binomPmf(wins, total, pnull);
+  const pval = rightTail(k, n, p);
 
-  const msg = p_exact < 0.05 ? 
-      "Rare outcome! Could indicate an advantage." :
-      "Result could easily happen by chance.";
+  const msg = pval < 0.05
+    ? "Reject H₀: Result is statistically significant with a P value of .05."
+    : "Fail to reject H₀: Result is NOT statistically significant.";
 
-  document.getElementById('result').innerHTML = 
-      `P(exactly ${wins} wins) = ${p_exact.toFixed(4)}<br>${msg}`;
+  document.getElementById('result').innerHTML =
+    `Right-tailed p-value (P(X ≥ ${k})) = ${pval.toFixed(6)}<br>${msg}`;
 }
 </script>
 </body>
